--- a/Projects/STM32746G-Discovery/rms_mono/GCC/CMakeLists.txt
+++ b/Projects/STM32746G-Discovery/rms_mono/GCC/CMakeLists.txt
@@ -1,15 +1,16 @@
 LIST(APPEND CMAKE_MODULE_PATH "./cmake/") 
-PROJECT(rms-mono)
+SET(CMAKE_LEGACY_CYGWIN_WIN32 1)
 
 CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
-ENABLE_LANGUAGE(ASM)
 
 SET(CHIP STM32F746NG)
 
 INCLUDE(gcc_arm_cortex)
 
-FIND_PACKAGE(CMSIS REQUIRED)
-FIND_PACKAGE(STM32HAL COMPONENTS gpio tim REQUIRED)
+FIND_PACKAGE(STM32CUBE)
+
+PROJECT(rms-mono)
+ENABLE_LANGUAGE(ASM)
 
 INCLUDE_DIRECTORIES(
     ${CMAKE_CURRENT_SOURCE_DIR}
