Working on CMake

--- a/Projects/STM32746G-Discovery/rms_mono/GCC/CMakeLists.txt
+++ b/Projects/STM32746G-Discovery/rms_mono/GCC/CMakeLists.txt
@@ -1,10 +1,8 @@
-LIST(APPEND CMAKE_MODULE_PATH "./cmake/") 
-SET(CMAKE_LEGACY_CYGWIN_WIN32 1)
+CMAKE_MINIMUM_REQUIRED(VERSION 2.8) 
 
-CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
+SET(CHIP "STM32F746NG" CACHE STRING "Chip part number")
 
-SET(CHIP STM32F746NG)
-
+LIST(APPEND CMAKE_MODULE_PATH "./cmake/")
 INCLUDE(gcc_arm_cortex)
 
 FIND_PACKAGE(STM32CUBE)
@@ -12,17 +10,22 @@ FIND_PACKAGE(STM32CUBE)
 PROJECT(rms-mono)
 ENABLE_LANGUAGE(ASM)
 
+GET_FILENAME_COMPONENT(PROJECT_ROOT "../" ABSOLUTE)
+GET_FILENAME_COMPONENT(BUILD_ROOT "./" ABSOLUTE)
+
 INCLUDE_DIRECTORIES(
-    ${CMAKE_CURRENT_SOURCE_DIR}
-    ${CMSIS_INCLUDE_DIRS}
-    ${STM32HAL_INCLUDE_DIR}
+    ${PROJECT_ROOT}/Inc
+    ${STM32CUBE_INC_DIRS}
 )
+
+FILE(GLOB C_SOURCE_FILES "${PROJECT_ROOT}/Src/*.c")
 
 SET(PROJECT_SOURCES
-    main.c
+    ${C_SOURCE_FILES}
 )
 
-ADD_EXECUTABLE(${CMAKE_PROJECT_NAME} ${PROJECT_SOURCES} ${CMSIS_SOURCES} ${STM32HAL_SOURCES})
+ADD_EXECUTABLE(${CMAKE_PROJECT_NAME}.elf ${PROJECT_SOURCES}) 
 
-ARM_SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME})
-ARM_ADD_HEX_BIN_TARGETS(${CMAKE_PROJECT_NAME})
+ARM_SET_TARGET_PROPERTIES(${CMAKE_PROJECT_NAME}.elf)
+ARM_ADD_HEX_BIN_TARGETS(${CMAKE_PROJECT_NAME}.elf)
+
